# BioHermes

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
biohermes/: config.py
biohermes/agent/: __init__.py  core.py  executor.py  judge.py  models.py  planner.py  recovery.py  self_improve.py  verifier.py
biohermes/api/: routes_document.py  routes_task.py  server.py  sse.py
biohermes/llm/: client.py  prompts.py
biohermes/pipeline/: context.py
biohermes/tools/: __init__.py  base.py  data_cleaner.py  mineru_parser.py  report_generator.py  structure_extractor.py  table_extractor.py
biohermes/utils/: file_utils.py  logging.py
demos/: build_demo_html.py  demo1_complex_pdf.py  demo2_multi_step_planning.py  demo3_batch_recovery.py  demo4_table_chart.py  demo5_knowledge_pipeline.py  run_all_demos.py
docs/: demo.html  technical_report.md
docs/example_logs/: demo_01_simple_parse.json  demo_02_extract_structure.json  demo_03_table_extract.json  demo_04_english_task.json  demo_05_complex_pipeline.json  demo_06_batch_hint.json  demo_07_financial_report.json  demo_08_deep_analysis.json  demo_09_error_recovery.json  demo_10_knowledge_pipeline.json
samples/: README.md
tests/: test_agent.py  test_pipeline.py  test_self_improve.py  test_tools.py
