[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "biohermes"
version = "2.0.0"
description = "MinerU-Powered Data Agent for Intelligent Document Processing"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]

[project.scripts]
biohermes = "biohermes.api.server:main"
